{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 137,
  "lineage": "ca915b22-3906-7d07-9838-b0a1e748a06c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0acb9a8339ab465bd",
            "arn": "arn:aws:ec2:us-west-2:891377178731:instance/i-02b99c560cb18143c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b99c560cb18143c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "docker-newkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d641de166ad6fe33",
            "private_dns": "ip-30-0-1-82.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "30.0.1.82",
            "public_ip": "35.87.20.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c141a6c399d71821",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0400887e766ddac00"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c92f681f5b9656af",
            "tags": {
              "Name": "nginx-instance"
            },
            "tags_all": {
              "Name": "nginx-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0400887e766ddac00"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.nginx_sg",
            "aws_subnet.public-SN-1",
            "aws_vpc.my-vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891377178731:internet-gateway/igw-055cb83c32e2575f0",
            "id": "igw-055cb83c32e2575f0",
            "owner_id": "891377178731",
            "vpc_id": "vpc-08489c7e3760284d4"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:891377178731:loadbalancer/app/nginx-alb/195198ff40a9e7bf",
            "arn_suffix": "app/nginx-alb/195198ff40a9e7bf",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-alb-179310919.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:891377178731:loadbalancer/app/nginx-alb/195198ff40a9e7bf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0400887e766ddac00"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c92f681f5b9656af"
              },
              {
                "subnet_id": "subnet-0f5917aab9015491b"
              }
            ],
            "subnets": [
              "subnet-0c92f681f5b9656af",
              "subnet-0f5917aab9015491b"
            ],
            "tags": {
              "Name": "nginx-alb"
            },
            "tags_all": {
              "Name": "nginx-alb"
            },
            "vpc_id": "vpc-08489c7e3760284d4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "aws_subnet.public-SN-1",
            "aws_subnet.public-SN-2",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:891377178731:listener/app/nginx-alb/195198ff40a9e7bf/cf1070e5d81a7d34",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:891377178731:targetgroup/nginx-tg/f3bf0fa478fe1b58",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:891377178731:listener/app/nginx-alb/195198ff40a9e7bf/cf1070e5d81a7d34",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:891377178731:loadbalancer/app/nginx-alb/195198ff40a9e7bf",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx_alb",
            "aws_lb_target_group.nginx_tg",
            "aws_security_group.nginx_sg",
            "aws_subnet.public-SN-1",
            "aws_subnet.public-SN-2",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:891377178731:targetgroup/nginx-tg/f3bf0fa478fe1b58",
            "arn_suffix": "targetgroup/nginx-tg/f3bf0fa478fe1b58",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:891377178731:targetgroup/nginx-tg/f3bf0fa478fe1b58",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08489c7e3760284d4"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:891377178731:targetgroup/nginx-tg/f3bf0fa478fe1b58-20240614221906281400000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:891377178731:targetgroup/nginx-tg/f3bf0fa478fe1b58",
            "target_id": "i-02b99c560cb18143c"
          },
          "dependencies": [
            "aws_instance.nginx_instance",
            "aws_lb_target_group.nginx_tg",
            "aws_security_group.nginx_sg",
            "aws_subnet.public-SN-1",
            "aws_vpc.my-vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Custum",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891377178731:route-table/rtb-0d7d97f76219a1ed2",
            "id": "rtb-0d7d97f76219a1ed2",
            "owner_id": "891377178731",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-055cb83c32e2575f0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-08489c7e3760284d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGway",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a083dd0ff4be3b73",
            "route_table_id": "rtb-0d7d97f76219a1ed2",
            "subnet_id": "subnet-0c92f681f5b9656af"
          },
          "dependencies": [
            "aws_internet_gateway.IGway",
            "aws_route_table.Custum",
            "aws_subnet.public-SN-1",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e147d09ae6214e9a",
            "route_table_id": "rtb-0d7d97f76219a1ed2",
            "subnet_id": "subnet-0f5917aab9015491b"
          },
          "dependencies": [
            "aws_internet_gateway.IGway",
            "aws_route_table.Custum",
            "aws_subnet.public-SN-2",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891377178731:security-group/sg-0400887e766ddac00",
            "description": "Security group for Nginx server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0400887e766ddac00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP inbound traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access from specific IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "891377178731",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-sg"
            },
            "tags_all": {
              "Name": "nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08489c7e3760284d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRIVATE-SN-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891377178731:subnet/subnet-0509f146bbb938a1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "30.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0509f146bbb938a1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377178731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRIVATE-SN-1"
            },
            "tags_all": {
              "Name": "PRIVATE-SN-1"
            },
            "vpc_id": "vpc-08489c7e3760284d4"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-SN-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891377178731:subnet/subnet-0c92f681f5b9656af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "30.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c92f681f5b9656af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377178731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PUB-Subnet-1"
            },
            "tags_all": {
              "Name": "PUB-Subnet-1"
            },
            "vpc_id": "vpc-08489c7e3760284d4"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-SN-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891377178731:subnet/subnet-0f5917aab9015491b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "30.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5917aab9015491b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377178731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub-Subnet-2"
            },
            "tags_all": {
              "Name": "Pub-Subnet-2"
            },
            "vpc_id": "vpc-08489c7e3760284d4"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891377178731:vpc/vpc-08489c7e3760284d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.0.0/16",
            "default_network_acl_id": "acl-061dc4dd531ef4b90",
            "default_route_table_id": "rtb-0243f971ad78fbc80",
            "default_security_group_id": "sg-09b70546e7c12b219",
            "dhcp_options_id": "dopt-0368bb2d4ac187861",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08489c7e3760284d4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0243f971ad78fbc80",
            "owner_id": "891377178731",
            "tags": {
              "Name": "VPC-terradock"
            },
            "tags_all": {
              "Name": "VPC-terradock"
            }
          }
        }
      ]
    }
  ]
}